Added Libraray for Wifi-Hotspot Added TCP Server from Einkaufsliste (needs rewrite) Added TCP Server Event

--- a/Programmierung/ServerDatenbrille/app/src/main/res/values/strings.xml
+++ b/Programmierung/ServerDatenbrille/app/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
 
     <string name="arrow_description">Pfeil für Scroll-Event</string>
 
+    <string name="qr_code_label">QR-Code</string>
+
 </resources>
