Designed TableLayout, added Cancel Button and added warning when searchstring is empty

--- a/Programmierung/ServerDatenbrille/app/src/main/res/values/strings.xml
+++ b/Programmierung/ServerDatenbrille/app/src/main/res/values/strings.xml
@@ -24,4 +24,6 @@
 
     <string name="wait">Bitte warten</string>
 
+    <string name="search_package_no_name">Bitte geben sie einen Namen ein, nach welchem gesucht werden kann!</string>
+
 </resources>
