Added Log-Messages, Client-Server Debug

--- a/Programmierung/ServerDatenbrille/app/src/main/res/values/strings.xml
+++ b/Programmierung/ServerDatenbrille/app/src/main/res/values/strings.xml
@@ -28,4 +28,6 @@
 
     <string name="nfc_disabled">NFC ist nicht aktiviert! Bitte aktivieren sie NFC um diese Funktion nutzen zu können!</string>
 
+    <string name="new_client_connected">Es hat sich ein neues Gerät verbunden!</string>
+
 </resources>
