--- a/Programmierung/ServerDatenbrille_rewritten/app/src/main/res/values/strings.xml
+++ b/Programmierung/ServerDatenbrille_rewritten/app/src/main/res/values/strings.xml
@@ -15,4 +15,7 @@
     <string name="drawer_title_settings">Einstellungen</string>
     <string name="drawer_action_settings">Einstellungen</string>
 
+    <string name="nfc_disabled">NFC ist nicht aktiviert! Bitte aktivieren sie NFC um diese Funktion nutzen zu können!</string>
+    <string name="nfc_tag_read">NFC Tag erfasst!</string>
+
 </resources>
