--- a/Programmierung/Optimiert/ClientDatenbrille/app/src/main/res/values/strings.xml
+++ b/Programmierung/Optimiert/ClientDatenbrille/app/src/main/res/values/strings.xml
@@ -3,10 +3,12 @@
 
     <string name="app_name">ClientDatenbrille</string>
     <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Settings</string>
     <string name="title_activity_network">NetworkActivity</string>
     <string name="title_activity_main">MainActivity</string>
-    <string name="dummy_button">Dummy Button</string>
-    <string name="dummy_content">DUMMY\nCONTENT</string>
+    <string name="title_activity_fullscreen">FullscreenActivity</string>
+    <string name="title_activity_settings">Einstellungen</string>
+
+    <string name="hotspot_name">Hotspot Name:</string>
+    <string name="hotspot_password">Hotspot Passwort:</string>
 
 </resources>
