Continue Work on merg projects

--- a/Programmierung/ServerDatenbrille_rewritten/app/src/main/res/values/strings.xml
+++ b/Programmierung/ServerDatenbrille_rewritten/app/src/main/res/values/strings.xml
@@ -21,4 +21,16 @@
     <string name="qr_code_scanned">QR - Code scanned!</string>
     <string name="qr_code_canceled">Qr - Code abgebrochen!</string>
 
+    <string name="arrow_description">Pfeil</string>
+
+    <string name="add_package">Package hinzufügen</string>
+    <string name="add">Hinzufügen</string>
+    <string name="cancel">Abbrechen</string>
+    <string name="search">Suchen</string>
+    <string name="wait">Bitte warten</string>
+    <string name="delete_Package">Package wirklich löschen?</string>
+    <string name="ok">OK</string>
+    <string name="search_package_no_name">Bitte geben sie einen Namen ein, nach welchem gesucht werden kann!</string>
+    <string name="new_client_connected">Es hat sich ein neues Gerät verbunden!</string>
+
 </resources>
