Added Future Format and qr codes & Activity Listener fix

--- a/Programmierung/ServerDatenbrille_rewritten/app/src/main/res/values/strings.xml
+++ b/Programmierung/ServerDatenbrille_rewritten/app/src/main/res/values/strings.xml
@@ -16,7 +16,7 @@
     <string name="qr_code_scanned">QR - Code scanned!</string>
     <string name="qr_code_canceled">Qr - Code abgebrochen!</string>
     <string name="arrow_description">Pfeil</string>
-    <string name="add_package">Package hinzufügen</string>
+    <string name="add_package">Paket hinzufügen</string>
     <string name="add">Hinzufügen</string>
     <string name="cancel">Abbrechen</string>
     <string name="search">Suchen</string>
