Marker no title fix

--- a/Programmierung/ServerDatenbrille_rewritten/app/src/main/res/values/strings.xml
+++ b/Programmierung/ServerDatenbrille_rewritten/app/src/main/res/values/strings.xml
@@ -33,5 +33,6 @@
 
     <string name="google_map_marker_description">Für weitere Infos hier drücken</string>
     <string name="google_map_marker_description_null">Keine Beschreibung gefunden</string>
+    <string name="google_map_marker_no_title">Kein Titel</string>
 
 </resources>
